--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/index.jsx --bundle --outfile=dist/out.js",
-    "build:dev": "yarn build --sourcemap --define:process.env.NODE_ENV=\"'development'\" --serve",
-    "build:prod": "yarn build --sourcemap --define:process.env.NODE_ENV=\"'production'\" --minify",
+    "build:base": "esbuild src/index.jsx --bundle --outfile=dist/out.js --loader:.glb=file --loader:.ttf=file",
+    "build:dev": "yarn build:base --sourcemap --define:process.env.NODE_ENV=\"'development'\" --serve",
+    "build:prod": "yarn build:base --sourcemap --define:process.env.NODE_ENV=\"'production'\" --minify",
     "dev": "concurrently 'yarn build:dev' 'yarn serve'",
     "serve": "serve-index --dir=\"./dist\" --template=\"./src/index.html\"",
+    "serve:prod": "serve-index --dir=\"./dist\" --template=\"./dist/index.html\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,11 +18,21 @@
     "concurrently": "^5.3.0",
     "esbuild": "^0.8.17",
     "nodemon": "^2.0.6",
+    "prettier": "^2.2.1",
     "serve-index-cli": "^1.2.1"
   },
   "dependencies": {
+    "@react-three/flex": "^0.5.2",
+    "@react-three/postprocessing": "^1.5.0",
+    "drei": "^2.2.10",
+    "lodash-es": "^4.17.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-three-fiber": "^5.3.7"
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^5.3.7",
+    "three": "^0.123.0",
+    "three.meshline": "^1.3.0",
+    "troika-three-text": "^0.36.1",
+    "victory": "^35.4.4"
   }
 }
